src/objects/ContactMergeFields__mdt.object
<CustomObject>
    <description>Used to store the API names of contact &amp; Contact Archival Objects</description>
    <fields>
        <fullName>ArchivedContactFieldName__c</fullName>
        <label>ArchivedContactFieldName</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContactFieldName__c</fullName>
        <label>ContactFieldName</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>showOnMergeTable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>showOnMergeTable</label>
        <type>Checkbox</type>
    </fields>
    <label>ContactMergeField</label>
    <pluralLabel>ContactMergeFields</pluralLabel>
</CustomObject>